package(default_visibility = ["//visibility:public"])

genrule(
    name = "libntl-build",
    srcs = glob(["**"], exclude=["bazel-*"]),
    outs = [
        "libntl.a",
        "NTL/ALL_FEATURES.h",
        "NTL/BasicThreadPool.h",
        "NTL/FFT.h",
        "NTL/FFT_impl.h",
        "NTL/FacVec.h",
        "NTL/GF2.h",
        "NTL/GF2E.h",
        "NTL/GF2EX.h",
        "NTL/GF2EXFactoring.h",
        "NTL/GF2X.h",
        "NTL/GF2XFactoring.h",
        "NTL/GF2XVec.h",
        "NTL/HNF.h",
        "NTL/LLL.h",
        "NTL/Lazy.h",
        "NTL/LazyTable.h",
        "NTL/MatPrime.h",
        "NTL/PD.h",
        "NTL/PackageInfo.h",
        "NTL/REPORT_ALL_FEATURES.h",
        "NTL/RR.h",
        "NTL/SmartPtr.h",
        "NTL/WordVector.h",
        "NTL/ZZ.h",
        "NTL/ZZVec.h",
        "NTL/ZZX.h",
        "NTL/ZZXFactoring.h",
        "NTL/ZZ_limbs.h",
        "NTL/ZZ_p.h",
        "NTL/ZZ_pE.h",
        "NTL/ZZ_pEX.h",
        "NTL/ZZ_pEXFactoring.h",
        "NTL/ZZ_pX.h",
        "NTL/ZZ_pXFactoring.h",
        "NTL/ctools.h",
        "NTL/fileio.h",
        "NTL/linux_s390x.h",
        "NTL/lip.h",
        "NTL/lzz_p.h",
        "NTL/lzz_pE.h",
        "NTL/lzz_pEX.h",
        "NTL/lzz_pEXFactoring.h",
        "NTL/lzz_pX.h",
        "NTL/lzz_pXFactoring.h",
        "NTL/mat_GF2.h",
        "NTL/mat_GF2E.h",
        "NTL/mat_RR.h",
        "NTL/mat_ZZ.h",
        "NTL/mat_ZZ_p.h",
        "NTL/mat_ZZ_pE.h",
        "NTL/mat_lzz_p.h",
        "NTL/mat_lzz_pE.h",
        "NTL/mat_poly_ZZ.h",
        "NTL/mat_poly_ZZ_p.h",
        "NTL/mat_poly_lzz_p.h",
        "NTL/matrix.h",
        "NTL/new.h",
        "NTL/pair.h",
        "NTL/pair_GF2EX_long.h",
        "NTL/pair_GF2X_long.h",
        "NTL/pair_ZZX_long.h",
        "NTL/pair_ZZ_pEX_long.h",
        "NTL/pair_ZZ_pX_long.h",
        "NTL/pair_lzz_pEX_long.h",
        "NTL/pair_lzz_pX_long.h",
        "NTL/pd_FFT.h",
        "NTL/quad_float.h",
        "NTL/sp_arith.h",
        "NTL/thread.h",
        "NTL/tools.h",
        "NTL/vec_GF2.h",
        "NTL/vec_GF2E.h",
        "NTL/vec_GF2XVec.h",
        "NTL/vec_RR.h",
        "NTL/vec_ZZ.h",
        "NTL/vec_ZZVec.h"          ,
        "NTL/vec_ZZ_p.h"           ,
        "NTL/vec_ZZ_pE.h"          ,
        "NTL/vec_double.h"         ,
        "NTL/vec_long.h"           ,
        "NTL/vec_lzz_p.h"          ,
        "NTL/vec_lzz_pE.h"         ,
        "NTL/vec_quad_float.h"     ,
        "NTL/vec_ulong.h"          ,
        "NTL/vec_vec_GF2.h"        ,
        "NTL/vec_vec_GF2E.h"       ,
        "NTL/vec_vec_RR.h"         ,
        "NTL/vec_vec_ZZ.h"         ,
        "NTL/vec_vec_ZZ_p.h"       ,
        "NTL/vec_vec_ZZ_pE.h"      ,
        "NTL/vec_vec_long.h"       ,
        "NTL/vec_vec_lzz_p.h"      ,
        "NTL/vec_vec_lzz_pE.h"     ,
        "NTL/vec_vec_ulong.h"      ,
        "NTL/vec_xdouble.h"        ,
        "NTL/vector.h"             ,
        "NTL/version.h"            ,
        "NTL/xdouble.h"            ,

    ],
    cmd = """
        set -x
        NTL_ROOT=$$(dirname $(location src/configure))
        pushd $$NTL_ROOT
            ./configure PREFIX=/tmp NTL_THREADS=on NTL_THREAD_BOOST=on NTL_EXCEPTIONS=on SHARED=on NTL_STD_CXX11=on NTL_SAFE_VECTORS=off TUNE=generic
            make && make install
        popd
        cp /tmp/lib/libntl.a $(location libntl.a)
        cp /tmp/include/NTL/ALL_FEATURES.h             $(location NTL/ALL_FEATURES.h       )      
        cp /tmp/include/NTL/BasicThreadPool.h          $(location NTL/BasicThreadPool.h    )      
        cp /tmp/include/NTL/FFT.h                      $(location NTL/FFT.h                )      
        cp /tmp/include/NTL/FFT_impl.h                 $(location NTL/FFT_impl.h           )      
        cp /tmp/include/NTL/FacVec.h                   $(location NTL/FacVec.h             )      
        cp /tmp/include/NTL/GF2.h                      $(location NTL/GF2.h                )      
        cp /tmp/include/NTL/GF2E.h                     $(location NTL/GF2E.h               )      
        cp /tmp/include/NTL/GF2EX.h                    $(location NTL/GF2EX.h              )      
        cp /tmp/include/NTL/GF2EXFactoring.h           $(location NTL/GF2EXFactoring.h     )      
        cp /tmp/include/NTL/GF2X.h                     $(location NTL/GF2X.h               )      
        cp /tmp/include/NTL/GF2XFactoring.h            $(location NTL/GF2XFactoring.h      )      
        cp /tmp/include/NTL/GF2XVec.h                  $(location NTL/GF2XVec.h            )      
        cp /tmp/include/NTL/HNF.h                      $(location NTL/HNF.h                )      
        cp /tmp/include/NTL/LLL.h                      $(location NTL/LLL.h                )      
        cp /tmp/include/NTL/Lazy.h                     $(location NTL/Lazy.h               )      
        cp /tmp/include/NTL/LazyTable.h                $(location NTL/LazyTable.h          )      
        cp /tmp/include/NTL/MatPrime.h                 $(location NTL/MatPrime.h           )      
        cp /tmp/include/NTL/PD.h                       $(location NTL/PD.h                 )      
        cp /tmp/include/NTL/PackageInfo.h              $(location NTL/PackageInfo.h        )      
        cp /tmp/include/NTL/REPORT_ALL_FEATURES.h      $(location NTL/REPORT_ALL_FEATURES.h)      
        cp /tmp/include/NTL/RR.h                       $(location NTL/RR.h                 )      
        cp /tmp/include/NTL/SmartPtr.h                 $(location NTL/SmartPtr.h           )      
        cp /tmp/include/NTL/WordVector.h               $(location NTL/WordVector.h         )      
        cp /tmp/include/NTL/ZZ.h                       $(location NTL/ZZ.h                 )      
        cp /tmp/include/NTL/ZZVec.h                    $(location NTL/ZZVec.h              )      
        cp /tmp/include/NTL/ZZX.h                      $(location NTL/ZZX.h                )      
        cp /tmp/include/NTL/ZZXFactoring.h             $(location NTL/ZZXFactoring.h       )      
        cp /tmp/include/NTL/ZZ_limbs.h                 $(location NTL/ZZ_limbs.h           )      
        cp /tmp/include/NTL/ZZ_p.h                     $(location NTL/ZZ_p.h               )      
        cp /tmp/include/NTL/ZZ_pE.h                    $(location NTL/ZZ_pE.h              )      
        cp /tmp/include/NTL/ZZ_pEX.h                   $(location NTL/ZZ_pEX.h             )      
        cp /tmp/include/NTL/ZZ_pEXFactoring.h          $(location NTL/ZZ_pEXFactoring.h    )      
        cp /tmp/include/NTL/ZZ_pX.h                    $(location NTL/ZZ_pX.h              )      
        cp /tmp/include/NTL/ZZ_pXFactoring.h           $(location NTL/ZZ_pXFactoring.h     )      
        cp /tmp/include/NTL/ctools.h                   $(location NTL/ctools.h             )      
        cp /tmp/include/NTL/fileio.h                   $(location NTL/fileio.h             )      
        cp /tmp/include/NTL/linux_s390x.h              $(location NTL/linux_s390x.h        )      
        cp /tmp/include/NTL/lip.h                      $(location NTL/lip.h                )      
        cp /tmp/include/NTL/lzz_p.h                    $(location NTL/lzz_p.h              )      
        cp /tmp/include/NTL/lzz_pE.h                   $(location NTL/lzz_pE.h             )      
        cp /tmp/include/NTL/lzz_pEX.h                  $(location NTL/lzz_pEX.h            )      
        cp /tmp/include/NTL/lzz_pEXFactoring.h         $(location NTL/lzz_pEXFactoring.h   )      
        cp /tmp/include/NTL/lzz_pX.h                   $(location NTL/lzz_pX.h             )      
        cp /tmp/include/NTL/lzz_pXFactoring.h          $(location NTL/lzz_pXFactoring.h    )      
        cp /tmp/include/NTL/mat_GF2.h                  $(location NTL/mat_GF2.h            )      
        cp /tmp/include/NTL/mat_GF2E.h                 $(location NTL/mat_GF2E.h           )      
        cp /tmp/include/NTL/mat_RR.h                   $(location NTL/mat_RR.h             )      
        cp /tmp/include/NTL/mat_ZZ.h                   $(location NTL/mat_ZZ.h             )      
        cp /tmp/include/NTL/mat_ZZ_p.h                 $(location NTL/mat_ZZ_p.h           )      
        cp /tmp/include/NTL/mat_ZZ_pE.h                $(location NTL/mat_ZZ_pE.h          )      
        cp /tmp/include/NTL/mat_lzz_p.h                $(location NTL/mat_lzz_p.h          )      
        cp /tmp/include/NTL/mat_lzz_pE.h               $(location NTL/mat_lzz_pE.h         )      
        cp /tmp/include/NTL/mat_poly_ZZ.h              $(location NTL/mat_poly_ZZ.h        )      
        cp /tmp/include/NTL/mat_poly_ZZ_p.h            $(location NTL/mat_poly_ZZ_p.h      )      
        cp /tmp/include/NTL/mat_poly_lzz_p.h           $(location NTL/mat_poly_lzz_p.h     )      
        cp /tmp/include/NTL/matrix.h                   $(location NTL/matrix.h             )      
        cp /tmp/include/NTL/new.h                      $(location NTL/new.h                )      
        cp /tmp/include/NTL/pair.h                     $(location NTL/pair.h               )      
        cp /tmp/include/NTL/pair_GF2EX_long.h          $(location NTL/pair_GF2EX_long.h    )      
        cp /tmp/include/NTL/pair_GF2X_long.h           $(location NTL/pair_GF2X_long.h     )      
        cp /tmp/include/NTL/pair_ZZX_long.h            $(location NTL/pair_ZZX_long.h      )      
        cp /tmp/include/NTL/pair_ZZ_pEX_long.h         $(location NTL/pair_ZZ_pEX_long.h   )      
        cp /tmp/include/NTL/pair_ZZ_pX_long.h          $(location NTL/pair_ZZ_pX_long.h    )      
        cp /tmp/include/NTL/pair_lzz_pEX_long.h        $(location NTL/pair_lzz_pEX_long.h  )      
        cp /tmp/include/NTL/pair_lzz_pX_long.h         $(location NTL/pair_lzz_pX_long.h   )      
        cp /tmp/include/NTL/pd_FFT.h                   $(location NTL/pd_FFT.h             )      
        cp /tmp/include/NTL/quad_float.h               $(location NTL/quad_float.h         )      
        cp /tmp/include/NTL/sp_arith.h                 $(location NTL/sp_arith.h           )      
        cp /tmp/include/NTL/thread.h                   $(location NTL/thread.h             )      
        cp /tmp/include/NTL/tools.h                    $(location NTL/tools.h              )      
        cp /tmp/include/NTL/vec_GF2.h                  $(location NTL/vec_GF2.h            )      
        cp /tmp/include/NTL/vec_GF2E.h                 $(location NTL/vec_GF2E.h           )      
        cp /tmp/include/NTL/vec_GF2XVec.h              $(location NTL/vec_GF2XVec.h        )      
        cp /tmp/include/NTL/vec_RR.h                   $(location NTL/vec_RR.h             )      
        cp /tmp/include/NTL/vec_ZZ.h                   $(location NTL/vec_ZZ.h             )      
        cp /tmp/include/NTL/vec_ZZVec.h                $(location NTL/vec_ZZVec.h          )      
        cp /tmp/include/NTL/vec_ZZ_p.h                 $(location NTL/vec_ZZ_p.h           )      
        cp /tmp/include/NTL/vec_ZZ_pE.h                $(location NTL/vec_ZZ_pE.h          )      
        cp /tmp/include/NTL/vec_double.h               $(location NTL/vec_double.h         )      
        cp /tmp/include/NTL/vec_long.h                 $(location NTL/vec_long.h           )      
        cp /tmp/include/NTL/vec_lzz_p.h                $(location NTL/vec_lzz_p.h          )      
        cp /tmp/include/NTL/vec_lzz_pE.h               $(location NTL/vec_lzz_pE.h         )      
        cp /tmp/include/NTL/vec_quad_float.h           $(location NTL/vec_quad_float.h     )      
        cp /tmp/include/NTL/vec_ulong.h                $(location NTL/vec_ulong.h          )      
        cp /tmp/include/NTL/vec_vec_GF2.h              $(location NTL/vec_vec_GF2.h        )      
        cp /tmp/include/NTL/vec_vec_GF2E.h             $(location NTL/vec_vec_GF2E.h       )      
        cp /tmp/include/NTL/vec_vec_RR.h               $(location NTL/vec_vec_RR.h         )      
        cp /tmp/include/NTL/vec_vec_ZZ.h               $(location NTL/vec_vec_ZZ.h         )      
        cp /tmp/include/NTL/vec_vec_ZZ_p.h             $(location NTL/vec_vec_ZZ_p.h       )      
        cp /tmp/include/NTL/vec_vec_ZZ_pE.h            $(location NTL/vec_vec_ZZ_pE.h      )      
        cp /tmp/include/NTL/vec_vec_long.h             $(location NTL/vec_vec_long.h       )      
        cp /tmp/include/NTL/vec_vec_lzz_p.h            $(location NTL/vec_vec_lzz_p.h      )      
        cp /tmp/include/NTL/vec_vec_lzz_pE.h           $(location NTL/vec_vec_lzz_pE.h     )      
        cp /tmp/include/NTL/vec_vec_ulong.h            $(location NTL/vec_vec_ulong.h      )      
        cp /tmp/include/NTL/vec_xdouble.h              $(location NTL/vec_xdouble.h        )      
        cp /tmp/include/NTL/vector.h                   $(location NTL/vector.h             )      
        cp /tmp/include/NTL/version.h                  $(location NTL/version.h            )      
        cp /tmp/include/NTL/xdouble.h                  $(location NTL/xdouble.h            )      
    """,
)

cc_library(
    name = "libntl",
    hdrs = glob(["NTL/*.h"]),
    srcs = ["libntl.a"],
    #includes = ["include"],
    linkopts = ["-lpthread", "-ldl"],
    visibility = ["//visibility:public"],
)
